--- a/CODE-SPT-Code/spt-code/sources/data/backup/parser check.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/data/backup/parser check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,24 +654,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(program (local_variable_declaration (modifiers) type: (type_identifier) declarator: (variable_declarator name: (underscore_pattern)) (MISSING \";\")) (ERROR (formal_parameters (formal_parameter type: (type_identifier) name: (identifier)) (spread_parameter (type_identifier) (variable_declarator name: (identifier))))) (block (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list)))) (expression_statement (assignment_expression left: (identifier) right: (method_invocation object: (identifier) name: (identifier) arguments: (argument_list (identifier))))) (return_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list (method_invocation object: (identifier) name: (identifier) arguments: (argument_list)) (identifier) (identifier))))))\n"
+      "(program (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters (formal_parameter type: (type_identifier) name: (identifier))) body: (block (for_statement init: (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (decimal_integer_literal)) declarator: (variable_declarator name: (identifier) value: (method_invocation object: (identifier) name: (identifier) arguments: (argument_list)))) condition: (binary_expression left: (identifier) right: (identifier)) update: (update_expression (identifier)) body: (block (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation object: (identifier) name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (unary_expression operand: (decimal_integer_literal))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (unary_expression operand: (decimal_integer_literal))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (true)))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier)))))))))\n",
+      "(program (local_variable_declaration type: (void_type) declarator: (variable_declarator name: (underscore_pattern)) (MISSING \";\")) (ERROR (formal_parameters (formal_parameter type: (type_identifier) name: (identifier)))) (block (for_statement init: (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (decimal_integer_literal)) declarator: (variable_declarator name: (identifier) value: (method_invocation object: (identifier) name: (identifier) arguments: (argument_list)))) condition: (binary_expression left: (identifier) right: (identifier)) update: (update_expression (identifier)) body: (block (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation object: (identifier) name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (local_variable_declaration type: (integral_type) declarator: (variable_declarator name: (identifier) value: (method_invocation name: (identifier) arguments: (argument_list (identifier))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (unary_expression operand: (decimal_integer_literal))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (unary_expression operand: (decimal_integer_literal))))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier) (true)))) (expression_statement (method_invocation name: (identifier) arguments: (argument_list (identifier))))))))\n"
      ]
     }
    ],
    "source": [
-    "source = 'public String _(String key, Object... args) {        ResourceBundle resourceBundle = getResourceBundle();        args = Stapler.htmlSafeArguments(args);        return resourceBundle.format(LocaleProvider.getLocale(), key, args);    }'\n",
-    "#source='void deleteEdgesBreakFaces_(AttributeStreamOfInt32 edgesToDelete) {for (int i = 0, n = edgesToDelete.size(); i < n; i++) {int half_edge = edgesToDelete.get(i);int chain = getHalfEdgeChain(half_edge);int halfEdgeTwin = getHalfEdgeTwin(half_edge);int chainTwin = getHalfEdgeChain(halfEdgeTwin);setChainHalfEdge_(chain, -1);setChainHalfEdge_(chainTwin, -1);updateVertexToHalfEdgeConnection_(half_edge, true);deleteEdgeImpl_(half_edge);}}'\n",
+    "# source = 'public String _(String key, Object... args) {        ResourceBundle resourceBundle = getResourceBundle();        args = Stapler.htmlSafeArguments(args);        return resourceBundle.format(LocaleProvider.getLocale(), key, args);    }'\n",
+    "source='void deleteEdgesBreakFaces_(AttributeStreamOfInt32 edgesToDelete) {}'#for (int i = 0, n = edgesToDelete.size(); i < n; i++) {int half_edge = edgesToDelete.get(i);int chain = getHalfEdgeChain(half_edge);int halfEdgeTwin = getHalfEdgeTwin(half_edge);int chainTwin = getHalfEdgeChain(halfEdgeTwin);setChainHalfEdge_(chain, -1);setChainHalfEdge_(chainTwin, -1);updateVertexToHalfEdgeConnection_(half_edge, true);deleteEdgeImpl_(half_edge);}}'\n",
     "#'private void setAreaAreaPredicates_() {        m_predicates_half_edge = Predicates.AreaAreaPredicates;        m_max_dim[MatrixPredicate.InteriorInterior] = 2;        m_max_dim[MatrixPredicate.InteriorBoundary] = 1;        m_max_dim[MatrixPredicate.InteriorExterior] = 2;        m_max_dim[MatrixPredicate.BoundaryInterior] = 1;        m_max_dim[MatrixPredicate.BoundaryBoundary] = 1;        m_max_dim[MatrixPredicate.BoundaryExterior] = 1;        m_max_dim[MatrixPredicate.ExteriorInterior] = 2;        m_max_dim[MatrixPredicate.ExteriorBoundary] = 1;        m_max_dim[MatrixPredicate.ExteriorExterior] = 2;        if (m_perform_predicates[MatrixPredicate.ExteriorExterior])        {            m_matrix[MatrixPredicate.ExteriorExterior] = 2;              m_perform_predicates[MatrixPredicate.ExteriorExterior] = false;            m_predicate_count--;        }}'\n",
     "lang='java'\n",
     "\n",
-    "ast = print_ast(source, lang)\n"
+    "ast = print_ast(source, lang)\n",
+    "\n",
+    "source='void _(AttributeStreamOfInt32 edgesToDelete) {}'#for (int i = 0, n = edgesToDelete.size(); i < n; i++) {int half_edge = edgesToDelete.get(i);int chain = getHalfEdgeChain(half_edge);int halfEdgeTwin = getHalfEdgeTwin(half_edge);int chainTwin = getHalfEdgeChain(halfEdgeTwin);setChainHalfEdge_(chain, -1);setChainHalfEdge_(chainTwin, -1);updateVertexToHalfEdgeConnection_(half_edge, true);deleteEdgeImpl_(half_edge);}}'\n",
+    "# source = 'public String _(String key, Object... args) {        ResourceBundle resourceBundle = getResourceBundle();        args = Stapler.htmlSafeArguments(args);        return resourceBundle.format(LocaleProvider.getLocale(), key, args);    }'\n",
+    "#'private void setAreaAreaPredicates_() {        m_predicates_half_edge = Predicates.AreaAreaPredicates;        m_max_dim[MatrixPredicate.InteriorInterior] = 2;        m_max_dim[MatrixPredicate.InteriorBoundary] = 1;        m_max_dim[MatrixPredicate.InteriorExterior] = 2;        m_max_dim[MatrixPredicate.BoundaryInterior] = 1;        m_max_dim[MatrixPredicate.BoundaryBoundary] = 1;        m_max_dim[MatrixPredicate.BoundaryExterior] = 1;        m_max_dim[MatrixPredicate.ExteriorInterior] = 2;        m_max_dim[MatrixPredicate.ExteriorBoundary] = 1;        m_max_dim[MatrixPredicate.ExteriorExterior] = 2;        if (m_perform_predicates[MatrixPredicate.ExteriorExterior])        {            m_matrix[MatrixPredicate.ExteriorExterior] = 2;              m_perform_predicates[MatrixPredicate.ExteriorExterior] = false;            m_predicate_count--;        }}'\n",
+    "lang='java'\n",
+    "\n",
+    "ast = print_ast(source, lang)"
    ]
   },
   {
