--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -204,23 +204,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5173\n",
-      "The 'asts' attribute does not exist.\n",
-      "The 'asts' attribute is empty or does not exist.\n"
+      "654393\n",
+      "Type of 'asts': <class 'list'>\n",
+      "Sample of 'asts': short_var_declaration__ unary_expression__ call_expression__ selector_expression __call_expression __unary_expression __short_var_declaration for_statement__ call_expression __for_statement if_statement__ binary_expression__ call_expression__ selector_expression __call_expression __binary_expression short_var_declaration assignment_statement__ parameter_declaration call_expression__ selector_expression selector_expression __call_expression return_statement__ call_expression __return_statement __assignment_statement __if_statement return_statement__ call_expression__ call_expression __call_expression __return_statement\n",
+      "Unique components in 'asts':\n",
+      "__anonymous_function_creation_expression\n",
+      "__array_creation_expression\n",
+      "__assert_statement\n",
+      "__assignment\n",
+      "__assignment_expression\n",
+      "__assignment_statement\n",
+      "__augmented_assignment\n",
+      "__augmented_assignment_expression\n",
+      "__await_expression\n",
+      "__binary_expression\n",
+      "__call_expression\n",
+      "__call_statement\n",
+      "__case_statement\n",
+      "__cast_expression\n",
+      "__class_constant_access_expression\n",
+      "__class_declaration\n",
+      "__clone_expression\n",
+      "__compound_statement\n",
+      "__conditional_expression\n",
+      "__const_declaration\n",
+      "__constructor_declaration\n",
+      "__continue_statement\n",
+      "__dec_statement\n",
+      "__default_statement\n",
+      "__defer_statement\n",
+      "__do_statement\n",
+      "__echo_statement\n",
+      "__else_statement\n",
+      "__enhanced_for_statement\n",
+      "__exponentiation_expression\n",
+      "__expression_statement\n",
+      "__expression_switch_statement\n",
+      "__field_declaration\n",
+      "__for_in_statement\n",
+      "__for_statement\n",
+      "__foreach_statement\n",
+      "__function_call_expression\n",
+      "__go_statement\n",
+      "__if_statement\n",
+      "__inc_statement\n",
+      "__include_expression\n",
+      "__include_once_expression\n",
+      "__index_expression\n",
+      "__instanceof_expression\n",
+      "__jsx_expression\n",
+      "__labeled_statement\n",
+      "__lambda_expression\n",
+      "__local_variable_declaration\n",
+      "__member_access_expression\n",
+      "__member_call_expression\n",
+      "__member_expression\n",
+      "__method_declaration\n",
+      "__new_expression\n",
+      "__object_creation_expression\n",
+      "__operator_assignment_statement\n",
+      "__parameter_declaration\n",
+      "__parenthesized_expression\n",
+      "__receive_statement\n",
+      "__require_expression\n",
+      "__require_once_expression\n",
+      "__rescue_statement\n",
+      "__return_statement\n",
+      "__scoped_call_expression\n",
+      "__scoped_property_access_expression\n",
+      "__select_statement\n",
+      "__selector_expression\n",
+      "__send_statement\n",
+      "__sequence_expression\n",
+      "__short_var_declaration\n",
+      "__slice_expression\n",
+      "__subscript_expression\n",
+      "__switch_expression\n",
+      "__switch_statement\n",
+      "__synchronized_statement\n",
+      "__ternary_expression\n",
+      "__throw_expression\n",
+      "__throw_statement\n",
+      "__try_statement\n",
+      "__try_with_resources_statement\n",
+      "__type_assertion_expression\n",
+      "__type_conversion_expression\n",
+      "__type_declaration\n",
+      "__type_switch_statement\n",
+      "__unary_expression\n",
+      "__unary_op_expression\n",
+      "__unless_statement\n",
+      "__unset_statement\n",
+      "__until_statement\n",
+      "__update_expression\n",
+      "__var_declaration\n",
+      "__when_statement\n",
+      "__while_statement\n",
+      "__with_statement\n",
+      "__yield_expression\n",
+      "__yield_statement\n",
+      "anonymous_function_creation_expression__\n",
+      "array_creation_expression\n",
+      "array_creation_expression__\n",
+      "assert_statement\n",
+      "assert_statement__\n",
+      "assignment\n",
+      "assignment__\n",
+      "assignment_expression\n",
+      "assignment_expression__\n",
+      "assignment_statement\n",
+      "assignment_statement__\n",
+      "augmented_assignment\n",
+      "augmented_assignment__\n",
+      "augmented_assignment_expression\n",
+      "augmented_assignment_expression__\n",
+      "await_expression\n",
+      "await_expression__\n",
+      "binary_expression\n",
+      "binary_expression__\n",
+      "break_statement\n",
+      "call_expression\n",
+      "call_expression__\n",
+      "call_statement\n",
+      "call_statement__\n",
+      "case_statement\n",
+      "case_statement__\n",
+      "cast_expression\n",
+      "cast_expression__\n",
+      "class_constant_access_expression\n",
+      "class_constant_access_expression__\n",
+      "class_declaration__\n",
+      "clone_expression\n",
+      "clone_expression__\n",
+      "compound_statement\n",
+      "compound_statement__\n",
+      "conditional_expression\n",
+      "conditional_expression__\n",
+      "const_declaration\n",
+      "const_declaration__\n",
+      "constructor_declaration\n",
+      "constructor_declaration__\n",
+      "continue_statement\n",
+      "continue_statement__\n",
+      "debugger_statement\n",
+      "dec_statement\n",
+      "dec_statement__\n",
+      "declare_statement\n",
+      "default_statement\n",
+      "default_statement__\n",
+      "defer_statement__\n",
+      "delete_statement\n",
+      "destructured_left_assignment_statement\n",
+      "do_statement__\n",
+      "echo_statement\n",
+      "echo_statement__\n",
+      "else_statement\n",
+      "else_statement__\n",
+      "empty_statement\n",
+      "enhanced_for_statement\n",
+      "enhanced_for_statement__\n",
+      "exponentiation_expression\n",
+      "exponentiation_expression__\n",
+      "expression_statement\n",
+      "expression_statement__\n",
+      "expression_switch_statement\n",
+      "expression_switch_statement__\n",
+      "fallthrough_statement\n",
+      "field_declaration\n",
+      "field_declaration__\n",
+      "for_in_statement\n",
+      "for_in_statement__\n",
+      "for_statement\n",
+      "for_statement__\n",
+      "foreach_statement__\n",
+      "function_call_expression\n",
+      "function_call_expression__\n",
+      "global_statement\n",
+      "go_statement__\n",
+      "goto_statement\n",
+      "if_statement\n",
+      "if_statement__\n",
+      "import_from_statement\n",
+      "import_statement\n",
+      "inc_statement\n",
+      "inc_statement__\n",
+      "include_expression\n",
+      "include_expression__\n",
+      "include_once_expression\n",
+      "include_once_expression__\n",
+      "index_expression\n",
+      "index_expression__\n",
+      "instanceof_expression\n",
+      "instanceof_expression__\n",
+      "jsx_expression\n",
+      "jsx_expression__\n",
+      "labeled_statement\n",
+      "labeled_statement__\n",
+      "lambda_expression\n",
+      "lambda_expression__\n",
+      "local_variable_declaration\n",
+      "local_variable_declaration__\n",
+      "member_access_expression\n",
+      "member_access_expression__\n",
+      "member_call_expression\n",
+      "member_call_expression__\n",
+      "member_expression\n",
+      "member_expression__\n",
+      "method_declaration\n",
+      "method_declaration__\n",
+      "named_label_statement\n",
+      "new_expression\n",
+      "new_expression__\n",
+      "nonlocal_statement\n",
+      "object_creation_expression\n",
+      "object_creation_expression__\n",
+      "operator_assignment_statement\n",
+      "operator_assignment_statement__\n",
+      "parameter_declaration\n",
+      "parameter_declaration__\n",
+      "parenthesized_expression\n",
+      "parenthesized_expression__\n",
+      "pass_statement\n",
+      "print_statement\n",
+      "raise_statement\n",
+      "receive_statement__\n",
+      "require_expression\n",
+      "require_expression__\n",
+      "require_once_expression\n",
+      "require_once_expression__\n",
+      "rescue_statement\n",
+      "rescue_statement__\n",
+      "rest_assignment_statement\n",
+      "return_statement\n",
+      "return_statement__\n",
+      "scoped_call_expression\n",
+      "scoped_call_expression__\n",
+      "scoped_property_access_expression\n",
+      "scoped_property_access_expression__\n",
+      "select_statement\n",
+      "select_statement__\n",
+      "selector_expression\n",
+      "selector_expression__\n",
+      "send_statement\n",
+      "send_statement__\n",
+      "sequence_expression\n",
+      "sequence_expression__\n",
+      "shell_command_expression\n",
+      "short_var_declaration\n",
+      "short_var_declaration__\n",
+      "slice_expression\n",
+      "slice_expression__\n",
+      "subscript_expression\n",
+      "subscript_expression__\n",
+      "switch_expression__\n",
+      "switch_statement__\n",
+      "synchronized_statement__\n",
+      "ternary_expression\n",
+      "ternary_expression__\n",
+      "throw_expression\n",
+      "throw_expression__\n",
+      "throw_statement\n",
+      "throw_statement__\n",
+      "try_statement\n",
+      "try_statement__\n",
+      "try_with_resources_statement\n",
+      "try_with_resources_statement__\n",
+      "type_assertion_expression\n",
+      "type_assertion_expression__\n",
+      "type_conversion_expression\n",
+      "type_conversion_expression__\n",
+      "type_declaration\n",
+      "type_declaration__\n",
+      "type_switch_statement__\n",
+      "unary_expression\n",
+      "unary_expression__\n",
+      "unary_op_expression\n",
+      "unary_op_expression__\n",
+      "unless_statement\n",
+      "unless_statement__\n",
+      "unset_statement\n",
+      "unset_statement__\n",
+      "until_statement\n",
+      "until_statement__\n",
+      "update_expression\n",
+      "update_expression__\n",
+      "var_declaration\n",
+      "var_declaration__\n",
+      "variadic_parameter_declaration\n",
+      "when_statement\n",
+      "when_statement__\n",
+      "while_statement__\n",
+      "with_statement\n",
+      "with_statement__\n",
+      "yield_expression\n",
+      "yield_expression__\n",
+      "yield_statement__\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
-    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.search.java.valid.pk'\n",
-    "# filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/pre_train.pk'\n",
+    "#filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.search.java.valid.pk'\n",
+    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/pre_train.pk'\n",
     "\n",
     "with open(filename, 'rb') as file:\n",
     "    dataset = pickle.load(file)\n",
