added a new code

--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -642,16 +642,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total input lines read: 1309842\n",
-      "Total output lines prepared: 1309842\n",
-      "Data has been processed and saved to /home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_raw_train.txt.\n"
+      "Total input lines read: 10000\n",
+      "Total output lines prepared: 10000\n",
+      "Data has been processed and saved to /home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_methods_valid_pred_final.txt.\n"
      ]
     }
    ],
@@ -667,8 +667,8 @@
     "    return re.sub(pattern=STRING_MATCHING_PATTERN, repl='___STR', string=source)\n",
     "\n",
     "# Path to your JSON file\n",
-    "file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/java-small.train.json'\n",
-    "output_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_raw_train.txt'\n",
+    "file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/java-small.val.json'\n",
+    "output_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_methods_valid_final.txt'\n",
     "\n",
     "results = []  # Store the output lines here\n",
     "\n",
@@ -825,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
