--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -542,10 +542,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The files were concatenated successfully and saved to ast_jdt_nongen_output_file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open the two source files and the output file\n",
+    "with open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/longmethod.txt', 'r') as source_file, \\\n",
+    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/ast_outputs_pretrain.txt', 'r') as asts_file, \\\n",
+    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/asts/ast_jdt_nongen_output_file.txt', 'w') as output_file:\n",
+    "\n",
+    "    # Read lines from both files\n",
+    "    source_lines = source_file.readlines()\n",
+    "    asts_lines = asts_file.readlines()\n",
+    "\n",
+    "    # Iterate over the lines from both files\n",
+    "    for source_line, asts_line in zip(source_lines, asts_lines):\n",
+    "        # Strip newline characters and concatenate the lines with the desired format\n",
+    "        source_line_clean = source_line.replace('\"', '').strip()\n",
+    "        asts_line_clean = asts_line.strip()\n",
+    "\n",
+    "        formatted_line = f'Source: \"{source_line_clean}\", Asts: \"{asts_line_clean}\"\\n'\n",
+    "        \n",
+    "        # Write the formatted line to the output file\n",
+    "        output_file.write(formatted_line)\n",
+    "\n",
+    "print(\"The files were concatenated successfully and saved to ast_jdt_nongen_output_file.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
