--- a/CODE-SPT-Code/spt-code/sources/pipeline.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline.ipynb
@@ -333,6 +333,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Paths to the JSON files\n",
+    "files = [\"/home/user1-system11/Documents/research-shradha/CODE-SPT-Code-TreeSitterV3/SPT-Code/outputs/pre_train_20241116_103947/multi-tokenizer/code_tokenizer.json\", \"/home/user1-system11/Documents/research-shradha/CODE-SPT-Code-TreeSitterV3/SPT-Code/outputs/pre_train_20241116_103947/multi-tokenizer/ast_tokenizer.json\", \"/home/user1-system11/Documents/research-shradha/CODE-SPT-Code-TreeSitterV3/SPT-Code/outputs/pre_train_20241116_103947/multi-tokenizer/nl_tokenizer.json\"]\n",
+    "merged_vocab = {}\n",
+    "merged_data = {}\n",
+    "\n",
+    "for file in files:\n",
+    "    with open(file, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "        \n",
+    "        # Merge the vocab\n",
+    "        for token, id in data[\"model\"][\"vocab\"].items():\n",
+    "            if token not in merged_vocab:\n",
+    "                merged_vocab[token] = len(merged_vocab)  # Assign a new unique ID\n",
+    "                \n",
+    "        # Keep the rest of the structure from the first file\n",
+    "        if not merged_data:\n",
+    "            merged_data = data\n",
+    "\n",
+    "# Replace the vocab in the merged data\n",
+    "merged_data[\"model\"][\"vocab\"] = merged_vocab\n",
+    "\n",
+    "# Output the merged JSON\n",
+    "with open(\"merged_tokenizer_01.json\", \"w\") as f:\n",
+    "    json.dump(merged_data, f, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -744,140 +778,17 @@
     "        print(f\"Error during prediction: {e}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()\n",
+    "\n",
+    "#output: this.fsLock.writeLock()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You passed along `num_labels=3` with an incompatible id to label map: {'0': 'LABEL_0', '1': 'LABEL_1'}. The number of labels wil be overwritten to 2.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model and tokenizer...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Padding token not found. Adding [PAD] as pad_token.\n",
-      "Model and tokenizer loaded successfully!\n",
-      "\n",
-      "Input code: public Token<? extends TokenIdentifier> getToken(Text alias) {    return  [MSK] ;}\n",
-      "\n",
-      "Tokenized Input IDs: [[148, 465, 33, 36, 872, 465, 1451, 35, 3970, 13, 497, 1494, 14, 69, 121, 4, 32, 71]]\n",
-      "Attention Mask: [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n",
-      "Special Tokens: [AddedToken(\"[PAD]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True), AddedToken(\"[MSK]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True)]\n",
-      "\n",
-      "Generating predictions with probabilities...\n",
-      "Candidate 1: public token identifier. gettoken ( alias ) (Probability: 0.2223)\n",
-      "Candidate 2: public token identifier. parse ( text alias ) (Probability: 0.2213)\n",
-      "Candidate 3: public token identifier. to identifier ( alias ) (Probability: 0.2059)\n",
-      "Candidate 4: public token identifier. gettoken ( text alias ) (Probability: 0.1831)\n",
-      "Candidate 5: public token identifier. to identifier ( alias. gettext ( ) ) (Probability: 0.1674)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    # Define repository and subfolder\n",
-    "    model_name = \"shradha01/Code-completion-01\"  # Main model repository\n",
-    "    tokenizer_name = \"shradha01/code-tokenizer-01\"  # Subfolder for tokenizer\n",
-    "\n",
-    "    print(\"Loading model and tokenizer...\")\n",
-    "    try:\n",
-    "        # Load model\n",
-    "        model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
-    "\n",
-    "        # Load tokenizer\n",
-    "        tokenizer = AutoTokenizer.from_pretrained(tokenizer_name)\n",
-    "\n",
-    "        special_tokens = {\"additional_special_tokens\": [\"[MSK]\"]}\n",
-    "        tokenizer.special_tokens_map[\"[MSK]\"] = 46659\n",
-    "        if tokenizer.pad_token is None:\n",
-    "            print(\"Padding token not found. Adding [PAD] as pad_token.\")\n",
-    "            special_tokens[\"pad_token\"] = \"[PAD]\"\n",
-    "\n",
-    "        tokenizer.add_special_tokens(special_tokens)\n",
-    "\n",
-    "        # Resize the model embeddings to accommodate new tokens\n",
-    "        model.resize_token_embeddings(len(tokenizer))\n",
-    "\n",
-    "        print(\"Model and tokenizer loaded successfully!\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error loading model or tokenizer: {e}\")\n",
-    "        return\n",
-    "\n",
-    "    # Example input\n",
-    "    incomplete_code = \"public Token<? extends TokenIdentifier> getToken(Text alias) {    return  [MSK] ;}\"\n",
-    "    print(\"\\nInput code:\", incomplete_code)\n",
-    "\n",
-    "    # Tokenize input\n",
-    "    inputs = tokenizer(\n",
-    "            incomplete_code,\n",
-    "            return_tensors=\"pt\",\n",
-    "            truncation=True,\n",
-    "            padding=True,\n",
-    "            max_length=model.config.max_position_embeddings,\n",
-    "        )\n",
-    "    incomplete_code = incomplete_code.replace(\"[MSK]\", \"38 [MSK] 40\")\n",
-    "\n",
-    "    print(\"\\nTokenized Input IDs:\", inputs[\"input_ids\"].tolist())\n",
-    "    print(\"Attention Mask:\", inputs[\"attention_mask\"].tolist())\n",
-    "    print(\"Special Tokens:\", tokenizer.all_special_tokens_extended)\n",
-    "\n",
-    "\n",
-    "    # Generate predictions with beam search\n",
-    "    print(\"\\nGenerating predictions with probabilities...\")\n",
-    "    try:\n",
-    "        # Perform beam search to get multiple candidates\n",
-    "        output_sequences = model.generate(\n",
-    "            inputs[\"input_ids\"],\n",
-    "            attention_mask=inputs[\"attention_mask\"],\n",
-    "            max_length=50,  # Maximum length of the generated sequence\n",
-    "            num_beams=5,    # Beam search for diverse outputs\n",
-    "            num_return_sequences=5,  # Number of candidates\n",
-    "            return_dict_in_generate=True,\n",
-    "            output_scores=True,\n",
-    "        )\n",
-    "\n",
-    "        # Decode the candidates\n",
-    "        candidates = [\n",
-    "            tokenizer.decode(seq, skip_special_tokens=True)\n",
-    "            for seq in output_sequences[\"sequences\"]\n",
-    "        ]\n",
-    "\n",
-    "        # Calculate probabilities from scores\n",
-    "        scores = output_sequences[\"sequences_scores\"]  # Log-probabilities\n",
-    "        probabilities = F.softmax(scores, dim=0)  # Convert to probabilities\n",
-    "\n",
-    "        # Display results with probabilities\n",
-    "        for idx, (candidate, prob) in enumerate(zip(candidates, probabilities)):\n",
-    "            print(f\"Candidate {idx + 1}: {candidate} (Probability: {prob:.4f})\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error during prediction: {e}\")\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
