--- a/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation below loads a pre-trained BART model and custom vocabularies for code, nl, and ast. However, only the vocab for code is used. The configuration and model are loaded from the model_dir. \n",
+    "First, input text is encoded using the custom vocabulary and then it uses the configured BART model to generate candidate sequences with beam search. And finally, the output sequences is decoded along with their probabilities.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -83,6 +91,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Login Huggingface"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -102,6 +117,13 @@
     "from huggingface_hub import login\n",
     "\n",
     "login(token=\"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\")  # Replace with your Hugging Face access token\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the tokenizer from a JSON file located in saved vocabs directory (use code_tokenizer.json) and save the tokenizer and its metadata to a specific directory and then upload the tokenizer to the Hugging Face Hub "
    ]
   },
   {
@@ -133,6 +155,13 @@
     "\n",
     "# Push the tokenizer to the Hugging Face Hub\n",
     "tokenizer.push_to_hub(\"llm-coding-tasks-tokenizer\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load a model saved in a specific directory and push it to the Hugging Face Hub."
    ]
   },
   {
@@ -274,12 +303,14 @@
     "        print(f\"Error during prediction: {e}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()\n",
+    "\n",
+    "#output: this.fsLock.writeLock()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,19 +328,20 @@
       "Model and tokenizer loaded successfully!\n",
       "Initializing pipeline...\n",
       "\n",
-      "Input code: public byte[] getRawBytes(Writable text) {    return ( [MSK] ).getBytes();}\n",
+      "Input code: @ override public int hashCode ( ) { final long v = currentValue . get ( ) ; return ( int ) v ^ ( int ) ( [MSK] ) ; }\n",
       "\n",
       "Tokenization debug:\n",
-      "Input IDs: tensor([[ 151,  263,   34,   35, 3194,  565,    9, 3038,  234,   10,   64,  120,\n",
-      "            9,    4,   10,   15, 1994,    9,   10,   28,   66]])\n",
-      "Decoded Input: public byte [ ] getraw bytes ( writable text ) { return ( [MSK] ). getbytes ( ) ; }\n",
+      "Input IDs: tensor([[  33,  476,  151,  125, 2202,    9,   10,   64,  161,  333,   59,   30,\n",
+      "         5257,   15,   87,    9,   10,   28,  120,    9,  125,   10,   59,   36,\n",
+      "            9,  125,   10,    9,    4,   10,   28,   66]])\n",
+      "Decoded Input: @ override public int hashcode ( ) { final long v = currentvalue. get ( ) ; return ( int ) v ^ ( int ) ( [MSK] ) ; }\n",
       "\n",
       "Generating predictions with probabilities...\n",
-      "Candidate 1: byte [ ]. class (Probability: 0.3696)\n",
-      "Candidate 2: bytes. length (Probability: 0.2754)\n",
-      "Candidate 3: byte stype. instance (Probability: 0.2684)\n",
-      "Candidate 4: byte writable = 1 (Probability: 0.1655)\n",
-      "Candidate 5: byte [ ]. getstart (Probability: 0.1635)\n"
+      "Candidate 1: super. hashcode ( ) (Probability: 0.6413)\n",
+      "Candidate 2: long. min_value (Probability: 0.5478)\n",
+      "Candidate 3: v > > > 32 (Probability: 0.3460)\n",
+      "Candidate 4: long. height (Probability: 0.2960)\n",
+      "Candidate 5: long. max_value (Probability: 0.2699)\n"
      ]
     }
    ],
@@ -340,7 +372,8 @@
     "        print(f\"Error initializing pipeline: {e}\")\n",
     "        return\n",
     "\n",
-    "    incomplete_code = \"public byte[] getRawBytes(Writable text) {    return ( [MSK] ).getBytes();}\"\n",
+    "    \n",
+    "    incomplete_code = \"@ override public int hashCode ( ) { final long v = currentValue . get ( ) ; return ( int ) v ^ ( int ) ( [MSK] ) ; }\"\n",
     "    print(\"\\nInput code:\", incomplete_code)\n",
     "\n",
     "    print(\"\\nTokenization debug:\")\n",
