--- a/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,14 @@
       "Token is valid (permission: fineGrained).\n",
       "Your token has been saved to /home/user1-system11/.cache/huggingface/token\n",
       "Login successful\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
