--- a/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
@@ -136,16 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/transformers/utils/generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/shradha01/llm-coding-tasks-tokenizer/commit/d3934091da68e08bea0ab0c238a5f9784bd88cf1', commit_message='Upload tokenizer', commit_description='', oid='d3934091da68e08bea0ab0c238a5f9784bd88cf1', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/shradha01/llm-coding-tasks-tokenizer-large/commit/ab8010a7e26aa7723a01c7accb3081b218a0cbfa', commit_message='Upload tokenizer', commit_description='', oid='ab8010a7e26aa7723a01c7accb3081b218a0cbfa', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,14 +165,14 @@
     "\n",
     "# Load the tokenizer\n",
     "tokenizer = PreTrainedTokenizerFast(\n",
-    "    tokenizer_file=\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/pre_train_20241125_001741/vocabs/code/code_tokenizer.json\"\n",
+    "    tokenizer_file=\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/default_model_20241205_102037/vocabs/code/code_tokenizer.json\"#\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/pre_train_20241125_001741/vocabs/code/code_tokenizer.json\"\n",
     ")\n",
     "\n",
     "# Save the tokenizer and all relevant files to a directory\n",
-    "tokenizer.save_pretrained(\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/pre_train_20241125_001741/vocabs/code\")\n",
+    "tokenizer.save_pretrained(\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/default_model_20241205_102037/vocabs/code\")\n",
     "\n",
     "# Push the tokenizer to the Hugging Face Hub\n",
-    "tokenizer.push_to_hub(\"llm-coding-tasks-tokenizer\")\n"
+    "tokenizer.push_to_hub(\"llm-coding-tasks-tokenizer-large\")\n"
    ]
   },
   {
@@ -174,24 +184,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You passed along `num_labels=3` with an incompatible id to label map: {'0': 'LABEL_0', '1': 'LABEL_1'}. The number of labels wil be overwritten to 2.\n",
-      "model.safetensors: 100%|██████████| 1.05G/1.05G [00:20<00:00, 50.7MB/s]\n"
+      "You passed along `num_labels=3` with an incompatible id to label map: {'0': 'LABEL_0', '1': 'LABEL_1'}. The number of labels wil be overwritten to 2.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/transformers/utils/generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/transformers/utils/generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/transformers/modeling_utils.py:519: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  return torch.load(checkpoint_file, map_location=map_location)\n",
+      "model.safetensors: 100%|██████████| 1.05G/1.05G [00:30<00:00, 34.3MB/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/shradha01/llm-coding-tasks-model/commit/41654e68ebea92f0637f9323d501e37d3b4a01b7', commit_message='Upload model', commit_description='', oid='41654e68ebea92f0637f9323d501e37d3b4a01b7', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/shradha01/llm-coding-tasks-model-large/commit/c278a164dc3a89ded309dfe94c9248fc1b5b5806', commit_message='Upload model', commit_description='', oid='c278a164dc3a89ded309dfe94c9248fc1b5b5806', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,8 +221,8 @@
    "source": [
     "from transformers import AutoModel\n",
     "\n",
-    "model_dir = \"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/pre_train_20241125_001741/models\"  \n",
-    "repo_name = \"llm-coding-tasks-model\"  \n",
+    "model_dir = \"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/default_model_20241205_102037/models\" #\"/home/user1-system11/Documents/research-shradha/deploy-spt-code/spt-code/outputs/pre_train_20241125_001741/models\"  \n",
+    "repo_name = \"llm-coding-tasks-model-large\"  \n",
     "\n",
     "model = AutoModel.from_pretrained(model_dir)\n",
     "\n",
@@ -209,13 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/user1-system11/miniconda3/envs/llm4code-project/lib/python3.11/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
       "You passed along `num_labels=3` with an incompatible id to label map: {'0': 'LABEL_0', '1': 'LABEL_1'}. The number of labels wil be overwritten to 2.\n"
      ]
     },
@@ -230,17 +254,17 @@
       "Input code: public void writeLock() { this.fsLock.longReadLock().lock(); [MSK] .lock(); }\n",
       "\n",
       "Tokenization debug:\n",
-      "Input IDs: tensor([[ 151,  205, 3098,    9,   10,   64,  196,   15,  943,  389,   15,  333,\n",
-      "         3813,    9,   10,   15,  389,    9,   10,   28,    4,   15,  389,    9,\n",
+      "Input IDs: tensor([[ 152,  210, 2926,    9,   10,   64,  196,   15,  935,  379,   15,  338,\n",
+      "         3672,    9,   10,   15,  379,    9,   10,   28,    4,   15,  379,    9,\n",
       "           10,   28,   66]])\n",
       "Decoded Input: public void writelock ( ) { this. fs lock. long readlock ( ). lock ( ) ; [MSK]. lock ( ) ; }\n",
       "\n",
       "Generating predictions with probabilities...\n",
-      "Candidate 1: this. lock (Probability: 0.5484)\n",
-      "Candidate 2: this. writelock (Probability: 0.3635)\n",
-      "Candidate 3: this. locks (Probability: 0.2878)\n",
-      "Candidate 4: this. constants (Probability: 0.2645)\n",
-      "Candidate 5: timeunit. milliseconds (Probability: 0.2481)\n"
+      "Candidate 1: this. connection (Probability: 0.2808)\n",
+      "Candidate 2: this. schedule expressiontype (Probability: 0.2680)\n",
+      "Candidate 3: this. shutdown inprogress (Probability: 0.2650)\n",
+      "Candidate 4: this. value (Probability: 0.2212)\n",
+      "Candidate 5: this. writelock (Probability: 0.2100)\n"
      ]
     }
    ],
@@ -249,8 +273,8 @@
     "import torch\n",
     "\n",
     "def main():\n",
-    "    model_name = \"shradha01/llm-coding-tasks-model\"  \n",
-    "    tokenizer_name = \"shradha01/llm-coding-tasks-tokenizer\"  \n",
+    "    model_name = \"shradha01/llm-coding-tasks-model-large\"  \n",
+    "    tokenizer_name = \"shradha01/llm-coding-tasks-tokenizer-large\"  \n",
     "\n",
     "    print(\"Loading model and tokenizer...\")\n",
     "    try:\n",
