--- a/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline copy.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "from huggingface_hub import login\n",
     "\n",
-    "login(token=\"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\")  # Replace with your Hugging Face access token\n"
+    "login(token=\"\")  # Replace with your Hugging Face access token\n"
    ]
   },
   {
