--- a/CODE-SPT-Code/spt-code/sources/pipeline.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/pipeline.ipynb
@@ -220,7 +220,7 @@
     "from huggingface_hub import create_repo\n",
     "\n",
     "repo_name = \"code_completion_tokenizer\"\n",
-    "create_repo(repo_id=repo_name, token=\"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\", private=False)  # Adjust `private` as needed\n"
+    "create_repo(repo_id=repo_name, token=\"\", private=False)  # Adjust `private` as needed\n"
    ]
   },
   {
